# wsTraffic

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  JIGA_SAT_PE.ioc  README.md
Alisson/: Calculos do transito.xlsx  alisson.txt
App/Application/Inc/: app.h  hmi.h  loop.h  piezo.h  wlog.h
App/Application/Src/: app.c  app_cfg.h  app_types.h  hmi.c  hmi_cfg.h  hmi_types.h  loop.c  loop_cfg.h  loop_types.h  piezo.c  piezo_cfg.h  piezo_types.h  sl_cfg.h  wlog.c
App/Middleware/SuperLoop/: sl.c  sl.h  sl_cfg_template.h  sl_lib.c  sl_lib.h  sl_lib_types.h  sl_types.h
Core/Inc/: main.h  stm32f0xx_it.h
Core/Src/: main.c  stm32f0xx_it.c
cmake/: generate-git-version.cmake
